<resources>
    <string name="app_name">SitpassMobile</string>

    <string name="hint_email">Número de CPF</string>
    <string name="hint_pass">Senha</string>
    <string name="button_entrar">Entrar</string>
    <string name="imgdesc_logo">Sitpass Logo</string>
    <string name="button_fgtpass"><a href="http://www.juventude.go.gov.br/ple/ple-login.html">Esqueceu a senha?</a></string>

    <string name="load_login">Verificando credenciais</string>
    <string name="load_saldo">Atualizando saldo</string>

    <string name="title_home">Início</string>
    <string name="title_recarga">Recarga</string>
    <string name="title_historico">Histórico</string>

    <string name="error_email_empty">Email não pode ser vazio</string>
    <string name="error_password_empty">Senha não pode ser vazia</string>
    <string name="error_password_small">Senha não pode ter menos que 6 caracteres</string>
    <string name="title_activity_home">SitpassMobile</string>

    <string name="home_hello">Bem vindo, %1$s.</string>
    <string name="home_descsaldo">Saldo Atual:</string>
    <string name="home_saldo">R$ %1$s</string>
    <string name="home_numpass">Você tem crédito suficiente para %1$s viagens.</string>
    <string name="home_imgdesc">Foto do usuário</string>

    <string name="recarga_hint_valor">Valor da Recarga</string>
    <string name="recarga_pagamentosdesc">Formas de Pagamento</string>
    <string name="recarga_cartaocreditodesc">Cartão de Crédito</string>
    <string name="recarga_cartaoimgdesc">Cartão</string>

    <string name="historico_titulo">Histórico de Transações</string>
    <string name="historico_perdido"><a href="http://www.sitpass.com.br/portalsitpass/portalusuariopf/login.html">Cartão perdido ou roubado?</a></string>
    <string name="desc_newcard">Ícone de Novo Cartão</string>

    <string name="nometitular_hint">Nome do Titular (Opcional)</string>
    <string name="GravarCartao">Gravar</string>
    <string name="CartaoValido">Formulário é valido!</string>
    <string name="CartaoInvalido">Formulário não é válido!</string>
    <string name="button_gravarcartao">Gravar</string>
    <string name="icon_person">Ícone de uma pessoa</string>
    <string name="button_pagar">Pagar</string>
    <string name="button_logout">Logout</string>
    <string name="desc_status_historico">Denota o tipo de transação dependendo da cor</string>
</resources>
